--- a/src/css/App.css
+++ b/src/css/App.css
@@ -44,6 +44,10 @@ body {
 .shows-grid li {
   width: 20rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   padding: 2rem;
 }
 
