--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,7 +24,40 @@ body {
 
 /* Sidebar styles */
 .sidebar {
-  width: 25rem;
+  width: 25rem;  
+}
+
+#burger-icon {
+  cursor: pointer;
+  padding: 2rem;
+}
+
+.burger-icon-bar1, .burger-icon-bar2, .burger-icon-bar3 {
+  width: 3.2rem;
+  height: 0.4rem;
+  background-color: #0a0a0a;
+  margin: 0.6rem 0;
+  transition: 0.4s;
+}
+
+#burger-icon.open .burger-icon-bar1 {
+  transform: rotate(-45deg) translate(-0.9rem, 0.7rem) ;
+}
+
+#burger-icon.open .burger-icon-bar2 {
+  opacity: 0;
+}
+
+#burger-icon.open .burger-icon-bar3 {
+  transform: rotate(45deg) translate(-0.7rem, -0.6rem) ;
+}
+
+.menu {
+  display: none;  
+}
+
+.menu.open {
+  display: flex;
 }
 
 .search {
